# history-of-rlvr

./: .gitignore  GRADIENT_ANALYSIS.md  README.md  pyproject.toml  requirements.txt
async_rl/: client.py  config.py  display.py  launch.py  main.py  orchestrator.py  server.py  trainer.py
environments/: __init__.py  base.py  gpqa.py  gpqa_rl.py  gpqa_sft.py  gsm8k.py  gsm8k_rl.py  gsm8k_sft.py
environments/gpqa/: __init__.py  gpqa_rl.py  gpqa_sft.py
environments/gsm8k/: __init__.py  gsm8k_rl.py  gsm8k_sft.py
experiments/: __init__.py
experiments/sync_rl/: launch.py  main.py  trainer.py
extra/: GRADIENT_ANALYSIS.md
rl/: grpo.py
rl/algorithms/: __init__.py
rl/algorithms/cispo/: __init__.py  cispo.py
rl/algorithms/dapo/: __init__.py  dapo.py
rl/algorithms/grpo/: __init__.py  grpo.py
rl/algorithms/gspo/: __init__.py  gspo.py
rl/algorithms/prime/: prime.py
rl/async_rl/: __main__.py  config.py  launch.py  main.py  orchestrator.py  trainer.py
rl/sync_rl/: config.py  log_router.py  main.py  trainer.py
scripts/: eval_gsm8k.py  merge_lora_checkpoint.py  serve_lora_for_eval.sh
sft/: __init__.py  config.py  data.py  main.py  trainer.py
src/history_of_rlvr/: __init__.py
src/history_of_rlvr.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/history_of_rlvr/environments/: __init__.py  base.py
src/history_of_rlvr/rl/: __main__.py  evaluator.py  launch.py  main.py  server.py  trainer.py
src/history_of_rlvr/sft/: __init__.py  main.py  trainer.py
sync_rl/: config.py  inference.py  launch.py  main.py  reward.py  trainer.py
(+22 files in other folders)
