[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "history-of-rlvr"
version = "0.1.0"
description = "RLVR algorithms and training infrastructure"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "torch",
    "transformers",
    "datasets",
    "vllm",
    "accelerate",
    "peft",
]

[project.optional-dependencies]
dev = []

[tool.setuptools.packages.find]
where = ["src"]
include = ["history_of_rlvr*"]
